Refactor User model attributes for consistency and update app.py to log database connection URI

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,4 @@
 FLASK_SECRET_KEY=your-secret-key
 DATABASE_URL=mysql+pymysql://user:password@localhost/dbname
+
+DATABASE_URL=mysql+pymysql://comp440user:aStrongPassword!@localhost/comp440db
