refactor: update README for enhanced project overview and functionality details; remove unused pages and update environment variables

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,2 @@
 FLASK_SECRET_KEY=your-secret-key
-DATABASE_URL=mysql+pymysql://user:password@localhost/dbname
-
-DATABASE_URL=mysql+pymysql://comp440user:aStrongPassword!@localhost/comp440db
+SHARED_DATABASE_URL=shared_database_URL
