--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,16 +5,24 @@ click==8.2.1
 concurrently==2.1
 cryptography==45.0.5
 dotenv==0.9.9
+exceptiongroup==1.3.0
 Flask==3.1.1
+flask-cors==6.0.1
 Flask-Login==0.6.3
 Flask-SQLAlchemy==3.1.1
 greenlet==3.2.3
+iniconfig==2.1.0
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+packaging==25.0
+pluggy==1.6.0
 pycparser==2.22
+Pygments==2.19.2
 PyMySQL==1.1.1
+pytest==8.4.1
 python-dotenv==1.1.1
 SQLAlchemy==2.0.41
+tomli==2.2.1
 typing_extensions==4.14.1
 Werkzeug==3.1.3
