--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,3 @@
 FLASK_SECRET_KEY=your-secret-key
 SHARED_DATABASE_URL=shared_database_URL
+IMGUR_CLIENT_ID=546c25a59c58ad7   # Public Imgur client ID, use this directly in /backend/.env
